Fixed table header overflow bug, closes #187

--- a/src/styles/layout/_nugget_table_view_layout.sass
+++ b/src/styles/layout/_nugget_table_view_layout.sass
@@ -26,7 +26,6 @@
               width: 15px
         &.header
           .cell
-            overflow: visible
             justify-self: center
             grid-column-gap: 15px
             &.active
@@ -34,6 +33,8 @@
               .icon
                 width: 100%
                 display: grid
+            p
+              overflow: visible
       .title
         padding: 0 16px
       .subscribe
